[package]
name = "sf_express"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.148", features = ["derive"]}
serde_json = {version = "1.0.89", default-features = false, features = ["alloc"]}
reqwest = {version="0.11.13", default-features=false, features = ["json", "rustls-tls", "cookies"]}
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread"] }
anyhow = {version="1.0.66"}
dotenv = {version="0.15.0"}
rand = {version="0.8"}
[profile.release]
lto = true
opt-level="z"
codegen-units = 1
panic = "abort"
strip = true
